--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form" class="grid grid-cols-4 mt-3 gap-3">
+<form [formGroup]="form" class="grid grid-cols-1 mt-3 gap-3 lg:grid-cols-4">
     <mat-form-field class="custom-input col-span-1" appearance="outline">
         <mat-label class="bg-white">{{'labelInput.city'| translate}}</mat-label>
         <mat-select formControlName="city">
