--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="relative border-b-2 border-solid border-[#D8D8D8] mb-3">
+<div class="relative border-b-2 border-solid border-[#D8D8D8] mb-3" [class.border-b-2]="device!=='desktop'">
     <form *ngIf="isShowSearch" [formGroup]="form" class="grid grid-cols-1 mt-3 gap-3 lg:grid-cols-[repeat(5,1fr)_90px]">
         <mat-form-field class="custom-input col-span-1" appearance="outline">
             <mat-label class="bg-white">{{'labelInput.city'| translate}}</mat-label>
@@ -47,14 +47,51 @@
                 class="fa-solid fa-rotate"></i>
             {{'labelInput.reset'|translate}}</button>
     </form>
-    <div *ngIf="isShowSearch" (click)="isShowSearch = false"
+    <div *ngIf="isShowSearch && device!=='desktop'" (click)="isShowSearch = false"
         class="absolute bottom-[-12px] right-5 w-6 h-6 rounded-full flex items-center justify-center text-red-500 border-solid border-[2px] border-red-500 bg-white hover:bg-gray-100 cursor-pointer">
         <i class="fa-solid fa-chevron-up"></i>
     </div>
-    <div *ngIf="!isShowSearch" (click)="isShowSearch = true"
+    <div *ngIf="!isShowSearch && device!=='desktop'" (click)="isShowSearch = true"
         class="absolute bottom-[-12px] right-5 w-6 h-6 rounded-full flex items-center justify-center text-red-500 border-solid border-[2px] border-red-500 bg-white hover:bg-gray-100 cursor-pointer">
         <i class="fa-solid fa-chevron-down"></i>
     </div>
 </div>
 
-<span class="text-[16px] lg:text-[36px] font-medium block text-center">{{"sloganText" | translate}}</span>
+<h1 class="text-[16px] lg:text-[36px] font-medium block text-center">{{"sloganText" | translate}}</h1>
+<div>
+    <h2 class="text-[14px] lg:text-[26px] font-medium block">Được xem nhiều nhất</h2>
+    <swiper-container class="swiper-container" slides-per-view="4" autoplay space-between=" 12" speed="500" loop="true"
+        centerInsufficientSlides="true" wrapperClass="slide-Wrapper" #swiper>
+
+        <swiper-slide class="swiper-slide py-4">
+            <app-item></app-item>
+        </swiper-slide>
+        <swiper-slide class="swiper-slide py-4">
+            <app-item></app-item>
+        </swiper-slide><swiper-slide class="swiper-slide py-4">
+            <app-item></app-item>
+        </swiper-slide><swiper-slide class="swiper-slide py-4">
+            <app-item></app-item>
+        </swiper-slide><swiper-slide class="swiper-slide py-4">
+            <app-item></app-item>
+        </swiper-slide><swiper-slide class="swiper-slide py-4">
+            <app-item></app-item>
+        </swiper-slide><swiper-slide class="swiper-slide py-4">
+            <app-item></app-item>
+        </swiper-slide>
+
+
+    </swiper-container>
+</div>
+<div>
+    <h2 class="text-[14px] lg:text-[26px] font-medium block">Mới nhất</h2>
+    <div class="grid lg:grid-cols-5 grid-cols-1 mt-3 gap-4">
+        <app-item></app-item>
+        <app-item></app-item>
+        <app-item></app-item>
+        <app-item></app-item>
+        <app-item></app-item>
+        <app-item></app-item>
+        <app-item></app-item>
+    </div>
+</div>
