feat: update  translate, footer

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -59,7 +59,7 @@
 
 <h1 class="text-[16px] lg:text-[36px] font-medium block text-center">{{"sloganText" | translate}}</h1>
 <div>
-    <h2 class="text-[14px] lg:text-[26px] font-medium block">Được xem nhiều nhất</h2>
+    <h2 class="text-[14px] lg:text-[26px] font-medium block">{{"homePage.mostViewed" | translate}}</h2>
     <swiper-container class="swiper-container" slides-per-view="4" autoplay space-between=" 12" speed="500" loop="true"
         centerInsufficientSlides="true" wrapperClass="slide-Wrapper" #swiper>
 
@@ -84,7 +84,7 @@
     </swiper-container>
 </div>
 <div>
-    <h2 class="text-[14px] lg:text-[26px] font-medium block">Mới nhất</h2>
+    <h2 class="text-[14px] lg:text-[26px] font-medium block">{{"homePage.newest" | translate}}</h2>
     <div class="grid lg:grid-cols-5 grid-cols-1 mt-3 gap-4">
         <app-item></app-item>
         <app-item></app-item>
