--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -42,11 +42,15 @@
     <nz-content>
       <div class=" border-t border-solid border-primary h-full">
 
-        <div class=" w-full lg:w-[1200px] m-auto">
+        <div class=" w-full lg:w-[1200px] m-auto pb-6">
           <div class="px-2 lg:px-0"> <router-outlet></router-outlet></div>
         </div>
       </div>
     </nz-content>
-    <!-- <nz-footer clas></nz-footer> -->
+    <nz-footer>
+      <div class="flex flex-col items-center justify-center py-4"><span>Đồ án Chuyên ngành công nghệ phần mềm</span>
+        <span>Vương Quang Huy & Nguyễn Thế Khải</span>
+      </div>
+    </nz-footer>
   </nz-layout>
 </nz-layout>
